Latest stuff                          (planned release date: 2015-09-??)
------------------------------------------------------------------------

 * BUGFIX: Applying metadata with extended attribute having null byte
           in value zeroed all following bytes of this xattr value.

 * Empty directories not present in metadata can be now removed when
   applying stored metadata if -E / --remove-empty-dirs option is used.

 * Scripts in example/ directory do not require bash anymore and there
   is a new example for post checkout hook.

 * Dependency on libattr's xattr.h header has been removed.
   As long as your libc provides sys/xattr.h (glibc does it since v2.3),
   everything should be fine.


Old times                                                    (2007-2014)
------------------------------------------------------------------------

Old times refer to alleged version 1 of metastore, which was never
properly released or tagged.


### v1 - przemoc's unofficial continuation                   (2012-2014)

In 2012 unofficial continuation has been proclaimed, merging existing
debian patches, including debian/ directory and adding new option -
not ignoring .git directories. This version also didn't have any formal
releases, only new entries were added in debian/changelog file.


### v1 - debian package                                      (2010-2012)

In 2010 metastore debian package started containing patches that didn't
get into official metastore repository.


### unreleased v1                                            (2007-2008)

David Härdeman wrote core of metastore in May 2007. His last commit was
in June 2008. He never officially released this software in any form
denoting its version number. His git repository (which no longer works)
was the only official way to obtain the source code.