@@ -7,12 +7,18 @@ Latest stuff                          (planned release date: 2015-09-??)
  * Empty directories not present in metadata can be now removed when
    applying stored metadata if -E / --remove-empty-dirs option is used.
 
+ * Stored metadata (in .metadata file by default) and real metadata
+   (from filesystem) can be now dumped in human-readable form using new
+   action: -d / --dump.  Please do not rely on its current format!
+
  * Scripts in example/ directory do not require bash anymore and there
    is a new example for post checkout hook.
 
  * Dependency on libattr's xattr.h header has been removed.
    As long as your libc provides sys/xattr.h (glibc does it since v2.3),
    everything should be fine.
+
+ * Dependency on libbsd has been added.  It's used by dump action.
 
 
 Old times                                                    (2007-2014)
